--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_ENV=LOCAL_DEV vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,7 +13,10 @@
     "@suid/icons-material": "^0.6.11",
     "@suid/material": "^0.15.1",
     "@suid/vite-plugin": "^0.1.5",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.8",
     "solid-js": "^1.7.8",
     "solid-styled-components": "^0.28.5",
     "solid-zustand": "^1.7.0",
@@ -21,7 +24,11 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.200",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.8.7",
+    "config": "^3.3.11",
+    "js-yaml": "^4.1.0",
+    "sass": "^1.74.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-solid": "^2.7.0"
