--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=LOCAL_DEV vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run --reporter verbose"
   },
   "dependencies": {
     "@solidjs/router": "^0.8.3",
@@ -28,9 +29,11 @@
     "@types/node": "^22.13.1",
     "config": "^4.0.0",
     "js-yaml": "^4.1.0",
+    "jsdom": "^26.1.0",
     "sass": "^1.74.1",
     "typescript": "^5.0.2",
     "vite": "^5.4.19",
-    "vite-plugin-solid": "^2.11.6"
+    "vite-plugin-solid": "^2.11.6",
+    "vitest": "^3.2.4"
   }
 }
