--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "NODE_ENV=LOCAL_DEV vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest run --reporter verbose"
+    "test": "vitest run --reporter verbose",
+    "lint": "eslint ./src --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
     "@solidjs/router": "^0.8.3",
@@ -24,14 +25,17 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@types/lodash": "^4.17.16",
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.13.1",
     "config": "^4.0.0",
+    "eslint": "^9.34.0",
     "js-yaml": "^4.1.0",
     "jsdom": "^26.1.0",
     "sass": "^1.74.1",
-    "typescript": "^5.0.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.41.0",
     "vite": "^5.4.19",
     "vite-plugin-solid": "^2.11.6",
     "vitest": "^3.2.4"
