Updated router to 0.15

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
+    "types": ["vite/client", "@testing-library/jest-dom"],
 
     /* Linting */
     "noUnusedLocals": true,
