--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint ./src --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
-    "@solidjs/router": "^0.8.3",
+    "@solidjs/router": "^0.15.3",
     "@suid/icons-material": "^0.6.11",
     "@suid/material": "^0.18.0",
     "@suid/vite-plugin": "^0.3.1",
@@ -26,6 +26,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@solidjs/testing-library": "^0.8.10",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/lodash": "^4.17.16",
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.13.1",
