--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=LOCAL_DEV vite",
+    "dev": "NODE_ENV=LOCAL_DEV vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest run --reporter verbose",
@@ -17,6 +17,7 @@
     "@suid/vite-plugin": "^0.3.1",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "d3": "^7.9.0",
     "lodash": "^4.17.21",
     "minimist": "^1.2.8",
     "solid-js": "^1.9.7",
