--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@solidjs/testing-library": "^0.8.10",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/d3": "^7.4.3",
     "@types/lodash": "^4.17.16",
     "@types/minimist": "^1.2.5",
     "@types/node": "^22.13.1",
